driver: Add support for vala-0.28

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -24,6 +24,10 @@ if HAVE_LIBVALA_0_26_X
 DRIVER_0_26_X_DIR = 0.26.x
 endif
 
+if HAVE_LIBVALA_0_28_X
+DRIVER_0_28_X_DIR = 0.28.x
+endif
+
 
 SUBDIRS = \
 	$(DRIVER_0_16_X_DIR) \
@@ -32,5 +36,6 @@ SUBDIRS = \
 	$(DRIVER_0_22_X_DIR) \
 	$(DRIVER_0_24_X_DIR) \
 	$(DRIVER_0_26_X_DIR) \
+	$(DRIVER_0_28_X_DIR) \
 	$(NULL)
 
