--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -29,6 +29,7 @@ TESTS = \
 	drivers/driver-0-22.vala \
 	drivers/driver-0-24.vala \
 	drivers/driver-0-26.vala \
+	drivers/driver-0-28.vala \
 	$(NULL)
 
 check-TESTS: $(TESTS)
