Add test for commit 0f0bca7e0519

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -28,6 +28,7 @@ TESTS = \
 	basic-types/bug596637.vala \
 	basic-types/bug596785.vala \
 	basic-types/bug632322.vala \
+	basic-types/bug644046.vala \
 	basic-types/bug647222.vala \
 	basic-types/bug648364.vala \
 	basic-types/bug650993.vala \
