Set array lengths for result variable
These where missing when generating postconditions

Fixes bug 737222

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -65,6 +65,7 @@ TESTS = \
 	methods/bug723195.vala \
 	methods/bug726347.vala \
 	methods/bug736235.vala \
+	methods/bug737222.vala \
 	methods/generics.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
