Warn about unused attributes
This may not be the best approach, but it's a start

--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -156,6 +156,7 @@ libvalacore_la_VALASOURCES = \
 	valaunlockstatement.vala \
 	valaunresolvedsymbol.vala \
 	valaunresolvedtype.vala \
+	valausedattr.vala \
 	valausingdirective.vala \
 	valavaluetype.vala \
 	valavariable.vala \
