Support XOR operation for booleans
Fixes bug 729907

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -37,6 +37,7 @@ TESTS = \
 	basic-types/bug659975.vala \
 	basic-types/bug678791.vala \
 	basic-types/bug686336.vala \
+	basic-types/bug729907.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
