codegen: Fix finally blocks with async yields
The Method.yield_count is not correct because in C the finally blocks may
be emitted twice.

Preserve API/ABI for this backport to 0.34.x

https://bugzilla.gnome.org/show_bug.cgi?id=741929

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -215,6 +215,7 @@ TESTS = \
 	asynchronous/bug654337.vala \
 	asynchronous/bug659886.vala \
 	asynchronous/bug661961.vala \
+	asynchronous/bug741929.vala \
 	asynchronous/bug742621.vala \
 	asynchronous/bug762819.vala \
 	asynchronous/closures.vala \
