codegen: Fix finally blocks with async yields
The Method.yield_count is not correct because in C the finally blocks may
be emitted twice.

https://bugzilla.gnome.org/show_bug.cgi?id=741929

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -258,6 +258,7 @@ TESTS = \
 	asynchronous/bug659886.vala \
 	asynchronous/bug661961.vala \
 	asynchronous/bug710103.vala \
+	asynchronous/bug741929.vala \
 	asynchronous/bug742621.vala \
 	asynchronous/bug762819.vala \
 	asynchronous/bug777242.vala \
