--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -204,6 +204,7 @@ TESTS = \
 	dbus/bug602003.test \
 	gir/bug651773.test \
 	gir/bug667751.test \
+	gir/bug742012.test \
 	$(NULL)
 
 check-TESTS: $(TESTS)
