codegen: Fix detailed signal disconnect in async methods
Fixes bug 742621

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -190,6 +190,7 @@ TESTS = \
 	asynchronous/bug654336.vala \
 	asynchronous/bug654337.vala \
 	asynchronous/bug661961.vala \
+	asynchronous/bug742621.vala \
 	asynchronous/closures.vala \
 	dbus/basic-types.test \
 	dbus/arrays.test \
