--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -30,6 +30,7 @@ TESTS = \
 	drivers/driver-0-24.vala \
 	drivers/driver-0-26.vala \
 	drivers/driver-0-28.vala \
+	drivers/driver-0-30.vala \
 	$(NULL)
 
 check-TESTS: $(TESTS)
