gdk-x11-3.0: Add to GIR_BINDINGS

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -405,6 +405,7 @@ GIR_BINDINGS = \
 	clutter-x11-1.0 \
 	cogl-pango-1.0 \
 	gdk-3.0 \
+	gdk-x11-3.0 \
 	gdk-pixbuf-2.0 \
 	gdl-3.0 \
 	geocode-glib-1.0 \
