--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -24,6 +24,10 @@ if HAVE_LIBVALA_0_30_X
 DRIVER_0_30_X_DIR = 0.30.x
 endif
 
+if HAVE_LIBVALA_0_32_X
+DRIVER_0_32_X_DIR = 0.32.x
+endif
+
 
 SUBDIRS = \
 	$(DRIVER_0_20_X_DIR) \
@@ -32,5 +36,6 @@ SUBDIRS = \
 	$(DRIVER_0_26_X_DIR) \
 	$(DRIVER_0_28_X_DIR) \
 	$(DRIVER_0_30_X_DIR) \
+	$(DRIVER_0_32_X_DIR) \
 	$(NULL)
 
