--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -29,6 +29,7 @@ TESTS = \
 	drivers/driver-0-26.vala \
 	drivers/driver-0-28.vala \
 	drivers/driver-0-30.vala \
+	drivers/driver-0-32.vala \
 	$(NULL)
 
 check-TESTS: $(TESTS)
