--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,6 +42,7 @@ TESTS = \
 	basic-types/bug731017.vala \
 	basic-types/bug756376.vala \
 	basic-types/bug761307.vala \
+	basic-types/bug761736.vala \
 	basic-types/bug771626.test \
 	basic-types/bug777697.test \
 	chainup/class-base.vala \
