codegen: Fix array length of array returned by lambda
This ensures that the right default values are used for missing ccode
attributes.

https://bugzilla.gnome.org/show_bug.cgi?id=761360

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -129,6 +129,7 @@ TESTS = \
 	delegates/bug639751.vala \
 	delegates/bug659778.vala \
 	delegates/bug703804.vala \
+	delegates/bug761360.vala \
 	objects/chainup.vala \
 	objects/classes.vala \
 	objects/generics.vala \
