Fix broken destruction of null-terminated arrays in async data structs
https://bugzilla.gnome.org/show_bug.cgi?id=762819

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -222,6 +222,7 @@ TESTS = \
 	asynchronous/bug659886.vala \
 	asynchronous/bug661961.vala \
 	asynchronous/bug742621.vala \
+	asynchronous/bug762819.vala \
 	asynchronous/closures.vala \
 	asynchronous/generator.vala \
 	asynchronous/yield.vala \
