vapi: Add graphene-1.0

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -88,6 +88,8 @@ dist_vapi_DATA = \
 	gobject-introspection-1.0.vapi \
 	goocanvas.deps \
 	goocanvas.vapi \
+	graphene-1.0.deps \
+	graphene-1.0.vapi \
 	gsl.vapi \
 	gstreamer-0.10.deps \
 	gstreamer-0.10.vapi \
@@ -413,6 +415,7 @@ GIR_BINDINGS = \
 	geocode-glib-1.0 \
 	gio-2.0 \
 	gobject-introspection-1.0 \
+	graphene-1.0 \
 	gudev-1.0 \
 	json-glib-1.0 \
 	libgdata \
@@ -551,6 +554,9 @@ gobject-introspection-1.0:
 
 goocanvas:
 	$(GENVAPI) --library $(srcdir)/goocanvas $(PACKAGESDIR)/goocanvas/goocanvas-custom.vala $(PACKAGESDIR)/goocanvas/goocanvas.gi
+
+graphene-1.0:
+	$(GENVAPI) --library $(srcdir)/graphene-1.0 --pkg gobject-2.0 --metadatadir $(METADATADIR) $(GIRDIR)/Graphene-1.0.gir
 
 gstreamer-0.10:
 	$(GENVAPI) --library $(srcdir)/gstreamer-0.10 $(PACKAGESDIR)/gstreamer-0.10/gstreamer-0.10-custom.vala $(PACKAGESDIR)/gstreamer-0.10/gstreamer-0.10.gi
