--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -365,7 +365,6 @@ GIDL_BINDINGS = \
 	gstreamer-tag-0.10 \
 	gstreamer-video-0.10 \
 	gtk+-2.0 \
-	gtk+-3.0 \
 	gtk+-unix-print-2.0 \
 	gtk+-unix-print-3.0 \
 	gtk+-unix-print-4.0 \
@@ -435,6 +434,7 @@ GIR_BINDINGS = \
 	gio-2.0 \
 	gobject-introspection-1.0 \
 	graphene-1.0 \
+	gtk+-3.0 \
 	gtk+-4.0 \
 	gudev-1.0 \
 	javascriptcoregtk-4.0 \
@@ -700,7 +700,7 @@ gtk+-2.0:
 	$(GENVAPI) --library $(srcdir)/gtk+-2.0 $(PACKAGESDIR)/gtk+-2.0/gtk+-2.0-custom.vala $(PACKAGESDIR)/gtk+-2.0/gtk+-2.0.gi
 
 gtk+-3.0:
-	$(GENVAPI) --library $(srcdir)/gtk+-3.0 $(PACKAGESDIR)/gtk+-3.0/gtk+-3.0-custom.vala $(PACKAGESDIR)/gtk+-3.0/gtk+-3.0.gi
+	$(GENVAPI) --library $(srcdir)/gtk+-3.0 --pkg atk --pkg gdk-3.0 --pkg gdk-pixbuf-2.0 --pkg gio-2.0 --pkg pango --pkg cairo --metadatadir $(METADATADIR) $(METADATADIR)/Gtk-3.0-custom.vala $(GIRDIR)/Gtk-3.0.gir
 
 gtk+-4.0:
 	$(GENVAPI) --library $(srcdir)/gtk+-4.0 --pkg atk --pkg cairo --pkg gdk-pixbuf-2.0 --pkg gio-2.0 --pkg graphene-1.0 --pkg pango --pkg x11 \
