Add Valadate test harness

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,12 +9,13 @@ SUBDIRS = \
 	codegen \
 	compiler \
 	vapi \
-	tests \
+	valadate \
 	doc \
 	gobject-introspection \
 	vapigen \
 	libvaladoc \
 	valadoc \
+	tests \
 	$(NULL)
 
 if ENABLE_UNVERSIONED
@@ -32,10 +33,6 @@ libvala@PACKAGE_SUFFIX@.pc: libvala.pc
 bootstrap: all
 	find $(top_srcdir) -name "*.vala.stamp" | xargs rm -f
 	$(MAKE) $(AM_MAKEFLAGS) all VALAC=$(abs_top_builddir)/compiler/valac$(EXEEXT) V=$V
-
-.PHONY: test
-test:
-	cd tests && $(MAKE) $(AM_MAKEFLAGS) check
 
 #if ENABLE_COVERAGE
 .PHONY: coverage coverage-report
@@ -93,6 +90,8 @@ EXTRA_DIST = \
 	.version \
 	build-aux/git-version-gen \
 	build-aux/gitlog-to-changelog \
+	build-aux/glib-tap.mk \
+	build-aux/tap-driver.sh \
 	$(NULL)
 
 DISTCLEANFILES = version.h
