--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -166,6 +166,7 @@ TESTS = \
 	objects/bug702846.vala \
 	objects/bug751338.vala \
 	objects/bug767092.test \
+	objects/bug768823.test \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
