Fix type checking when using generics in combination with subtyping
https://bugzilla.gnome.org/show_bug.cgi?id=615830

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -130,6 +130,7 @@ TESTS = \
 	delegates/bug703804.vala \
 	objects/chainup.vala \
 	objects/classes.vala \
+	objects/generics.vala \
 	objects/fields.vala \
 	objects/interfaces.vala \
 	objects/methods.vala \
@@ -173,6 +174,8 @@ TESTS = \
 	objects/bug751338.vala \
 	objects/bug767092.test \
 	objects/bug768823.test \
+	objects/bug615830-1.test \
+	objects/bug615830-2.test \
 	errors/errors.vala \
 	errors/bug567181.vala \
 	errors/bug579101.vala \
