--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -40,6 +40,7 @@ TESTS = \
 	basic-types/bug686336.vala \
 	basic-types/bug729907.vala \
 	basic-types/bug731017.vala \
+	basic-types/bug761307.vala \
 	namespaces.vala \
 	methods/lambda.vala \
 	methods/closures.vala \
