codegen: Distinguish between Enum and Flags for their to_string()
This fixes a GLib-critical while using g_enum_get_value() on a GFlagsClass.
Therefore use g_flags_get_first_value() if needed.

Patch by therebedragons111

https://bugzilla.gnome.org/show_bug.cgi?id=763831

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -86,6 +86,7 @@ TESTS = \
 	enums/enums.vala \
 	enums/flags.vala \
 	enums/bug673879.vala \
+	enums/bug763831.vala \
 	structs/structs.vala \
 	structs/gvalue.vala \
 	structs/bug530605.vala \
