codegen: Fix emission of constant array length
https://bugzilla.gnome.org/show_bug.cgi?id=756376

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -40,6 +40,7 @@ TESTS = \
 	basic-types/bug686336.vala \
 	basic-types/bug729907.vala \
 	basic-types/bug731017.vala \
+	basic-types/bug756376.vala \
 	basic-types/bug761307.vala \
 	basic-types/bug771626.test \
 	namespaces.vala \
