Fix type parameter check for overriding generic methods
https://bugzilla.gnome.org/show_bug.cgi?id=771964

Reported-by: Sebastian Reichel <sre@ring0.de>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,6 +72,7 @@ TESTS = \
 	methods/bug736235.vala \
 	methods/bug737222.vala \
 	methods/bug743877.vala \
+	methods/bug771964.vala \
 	methods/generics.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
