vala: Check generic-types count of DelegateType
https://bugzilla.gnome.org/show_bug.cgi?id=772204

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -139,6 +139,7 @@ TESTS = \
 	delegates/bug659778.vala \
 	delegates/bug703804.vala \
 	delegates/bug761360.vala \
+	delegates/bug772204.test \
 	objects/chainup.vala \
 	objects/classes.vala \
 	objects/generics.vala \
