driver: Add support for vala-0.36

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -32,6 +32,10 @@ if HAVE_LIBVALA_0_34_X
 DRIVER_0_34_X_DIR = 0.34.x
 endif
 
+if HAVE_LIBVALA_0_36_X
+DRIVER_0_36_X_DIR = 0.36.x
+endif
+
 
 SUBDIRS = \
 	$(DRIVER_0_20_X_DIR) \
@@ -42,5 +46,6 @@ SUBDIRS = \
 	$(DRIVER_0_30_X_DIR) \
 	$(DRIVER_0_32_X_DIR) \
 	$(DRIVER_0_34_X_DIR) \
+	$(DRIVER_0_36_X_DIR) \
 	$(NULL)
 
