--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -158,6 +158,9 @@ TESTS = \
 	objects/bug626038.vala \
 	objects/bug628639.vala \
 	objects/bug634782.vala \
+	objects/bug641418-1.test \
+	objects/bug641418-2.test \
+	objects/bug641418-3.test \
 	objects/bug642809.vala \
 	objects/bug643711.vala \
 	objects/bug646362.vala \
