Deny access to protected constructors
Based on patch by Timm Bäder <mail@baedert.org>

https://bugzilla.gnome.org/show_bug.cgi?id=760031

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -178,6 +178,7 @@ TESTS = \
 	objects/bug702736.vala \
 	objects/bug702846.vala \
 	objects/bug751338.vala \
+	objects/bug760031.test \
 	objects/bug767092.test \
 	objects/bug768823.test \
 	objects/bug615830-1.test \
