codegen: Support deprecating properties and their accessors
Use G_PARAM_DEPRECATED for properties and in addition their accessor
methods will be marked as deprecated.

Guard internal accessors calls with G_GNUC_BEGIN/END_IGNORED_DEPRECATIONS
to silence unavoidable warnings.

Based on patch by Simon Werbeck <simon.werbeck@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=732449

--- a/ccode/Makefile.am
+++ b/ccode/Makefile.am
@@ -40,6 +40,7 @@ libvalaccode_la_VALASOURCES = \
 	valaccodefunction.vala \
 	valaccodefunctioncall.vala \
 	valaccodefunctiondeclarator.vala \
+	valaccodeggnucsection.vala \
 	valaccodegotostatement.vala \
 	valaccodeidentifier.vala \
 	valaccodeifstatement.vala \
