Add nullability checker

--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -103,6 +103,7 @@ libvalacore_la_VALASOURCES = \
 	valamethodtype.vala \
 	valanamedargument.vala \
 	valanamespace.vala \
+	valanullabilitychecker.vala \
 	valanullliteral.vala \
 	valanulltype.vala \
 	valaobjectcreationexpression.vala \
