--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -25,6 +25,7 @@ libvalacore_la_VALASOURCES = \
 	valaarrayresizemethod.vala \
 	valaarraytype.vala \
 	valaassignment.vala \
+	valaastprinter.vala \
 	valaattribute.vala \
 	valabaseaccess.vala \
 	valabasicblock.vala \
