codegen: Add G_GNUC_FORMAT attribute for FormatArg functions
https://bugzilla.gnome.org/show_bug.cgi?id=774060

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -76,6 +76,7 @@ TESTS = \
 	methods/bug737222.vala \
 	methods/bug743877.vala \
 	methods/bug771964.vala \
+	methods/bug774060.vala \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
