--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -190,6 +190,8 @@ TESTS = \
 	objects/bug760031.test \
 	objects/bug767092.test \
 	objects/bug768823.test \
+	objects/bug773956-1.test \
+	objects/bug773956-2.test \
 	objects/bug615830-1.test \
 	objects/bug615830-2.test \
 	errors/errors.vala \
