Add G_GNUC_PRINTF/SCANF attribute for Printf/ScanfFormat functions
https://bugzilla.gnome.org/show_bug.cgi?id=710862

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -69,6 +69,7 @@ TESTS = \
 	methods/bug653391.vala \
 	methods/bug653908.vala \
 	methods/bug663210.vala \
+	methods/bug710862.vala \
 	methods/bug723009.vala \
 	methods/bug723195.vala \
 	methods/bug726347.vala \
