--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -244,6 +244,7 @@ TESTS = \
 	gir/bug651773.test \
 	gir/bug667751.test \
 	gir/bug742012.test \
+	gir/array-fixed-length.test \
 	annotations/deprecated.vala \
 	annotations/description.vala \
 	$(NULL)
