vala: Check inferred generic-types of MemberAccess
Although avoid this check for simple-generic accesses where this would be
too strict and not wanted.

https://bugzilla.gnome.org/show_bug.cgi?id=775466

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -79,6 +79,7 @@ TESTS = \
 	methods/bug743877.vala \
 	methods/bug771964.vala \
 	methods/bug774060.vala \
+	methods/bug775466.test \
 	methods/generics.vala \
 	methods/printf-invalid.test \
 	methods/printf-constructor.vala \
