D-Bus: support [DBus (signature = ...)] for properties
This was working for methods and signals, but not for properties.
Also add tests for all cases.

https://bugzilla.gnome.org/show_bug.cgi?id=744595

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -245,6 +245,7 @@ TESTS = \
 	dbus/dicts.test \
 	dbus/bug596862.vala \
 	dbus/bug602003.test \
+	dbus/rawvariants.test \
 	gir/bug651773.test \
 	gir/bug667751.test \
 	gir/bug742012.test \
