vapi: Add gtk+-unix-print-3.0 bindings

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -170,6 +170,8 @@ dist_vapi_DATA = \
 	gtk+-3.0.vapi \
 	gtk+-4.0.deps \
 	gtk+-4.0.vapi \
+	gtk+-unix-print-3.0.deps \
+	gtk+-unix-print-3.0.vapi \
 	gtkmozembed.deps \
 	gtkmozembed.vapi \
 	gtksourceview-2.0.deps \
@@ -360,6 +362,7 @@ GIDL_BINDINGS = \
 	gstreamer-video-0.10 \
 	gtk+-2.0 \
 	gtk+-3.0 \
+	gtk+-unix-print-3.0 \
 	gtksourceview-2.0 \
 	hildon-1 \
 	hildon-fm-2 \
@@ -694,6 +697,9 @@ gtk+-4.0:
 		$(METADATADIR)/Gdk-4.0-custom.vala $(GIRDIR)/Gdk-4.0.gir \
 		$(METADATADIR)/Gsk-4.0-custom.vala $(GIRDIR)/Gsk-4.0.gir \
 		$(METADATADIR)/Gtk-4.0-custom.vala $(GIRDIR)/Gtk-4.0.gir
+
+gtk+-unix-print-3.0:
+	$(GENVAPI) --library $(srcdir)/gtk+-unix-print-3.0 $(PACKAGESDIR)/gtk+-unix-print-3.0/gtk+-unix-print-3.0-custom.vala $(PACKAGESDIR)/gtk+-unix-print-3.0/gtk+-unix-print-3.0.gi
 
 gtksourceview-2.0:
 	$(GENVAPI) --library $(srcdir)/gtksourceview-2.0 $(PACKAGESDIR)/gtksourceview-2.0/gtksourceview-2.0.gi
