--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -132,6 +132,7 @@ TESTS = \
 	structs/bug690380.vala \
 	structs/bug749952.vala \
 	structs/bug775761.vala \
+	structs/bug777194.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
 	delegates/bug595610.vala \
